@@ -4,29 +4,26 @@
  * @coversDefaultClass NullFileJournal
  */
 class NullFileJournalTest extends MediaWikiUnitTestCase {
-	public function newObj() : NullFileJournal {
-		return FileJournal::factory( [ 'class' => NullFileJournal::class ], '' );
-	}
-
 	/**
 	 * @covers ::doLogChangeBatch
 	 */
 	public function testLogChangeBatch() {
-		$this->assertEquals( StatusValue::newGood(), $this->newObj()->logChangeBatch( [ 1 ], '' ) );
+		$this->assertEquals( StatusValue::newGood(),
+			( new NullFileJournal )->logChangeBatch( [ 1 ], '' ) );
 	}
 
 	/**
 	 * @covers ::doGetCurrentPosition
 	 */
 	public function testGetCurrentPosition() {
-		$this->assertFalse( $this->newObj()->getCurrentPosition() );
+		$this->assertFalse( ( new NullFileJournal )->getCurrentPosition() );
 	}
 
 	/**
 	 * @covers ::doGetPositionAtTime
 	 */
 	public function testGetPositionAtTime() {
-		$this->assertFalse( $this->newObj()->getPositionAtTime( 2 ) );
+		$this->assertFalse( ( new NullFileJournal )->getPositionAtTime( 2 ) );
 	}
 
 	/**
@@ -34,7 +31,7 @@ class NullFileJournalTest extends MediaWikiUnitTestCase {
 	 */
 	public function testGetChangeEntries() {
 		$next = 1;
-		$entries = $this->newObj()->getChangeEntries( null, 0, $next );
+		$entries = ( new NullFileJournal )->getChangeEntries( null, 0, $next );
 		$this->assertSame( [], $entries );
 		$this->assertNull( $next );
 	}
@@ -43,6 +40,6 @@ class NullFileJournalTest extends MediaWikiUnitTestCase {
 	 * @covers ::doPurgeOldLogs
 	 */
 	public function testPurgeOldLogs() {
-		$this->assertEquals( StatusValue::newGood(), $this->newObj()->purgeOldLogs() );
+		$this->assertEquals( StatusValue::newGood(), ( new NullFileJournal )->purgeOldLogs() );
 	}
 }
