@@ -130,6 +130,7 @@ because of Phabricator reports.
   getFallbacksFor, getFallbacksIncludingSiteLanguage. Use the corresponding new
   methods on the LanguageFallback class: getFirst, getAll, and
   getAllIncludingSiteLanguage.
+* FileJournal::factory is deprecated. Use the constructor directly instead.
 * AbstractBlock methods setBlocker(), getBlocker() are deprecated and will
   become internal implementation of DatabaseBlock.
 * Title::countRevisionsBetween has been deprecated and moved into RevisionStore.
